/*
 * This file was generated by the Gradle 'init' task.
 *
 * This project uses @Incubating APIs which are subject to change.
 */

apply(from = "$rootDir/versionsPlugin.gradle")

plugins {
    `java-library`
    `maven-publish`
    id("com.github.ben-manes.versions") version "0.54.0"
}

repositories {
//    mavenLocal()
    mavenCentral()
    gradlePluginPortal()
    maven {
        url = uri("https://repo.maven.apache.org/maven2/")
    }
}

sourceSets {
    getByName("test") {
        java {
            setSrcDirs(listOf("src/main/test")) // 替换为你的目录
        }
    }
}


dependencies {
    api(libs.bundles.depApi)
    compileOnly(libs.bundles.depCompileOnly)
    annotationProcessor(libs.bundles.depAnnotationProcessor)
}

group = "top.nserly"
version = "1.0-SNAPSHOT"
description = "PicturePlayer"
java.sourceCompatibility = JavaVersion.VERSION_25
java.targetCompatibility = JavaVersion.VERSION_25

publishing {
    publications.create<MavenPublication>("maven") {
        from(components["java"])
    }
}

tasks.withType<JavaCompile> {
    options.encoding = "UTF-8"

    options.compilerArgs.addAll(listOf("-Xlint:unchecked", "-Xlint:rawtypes"))
    // 可选：将警告视为错误
    // options.compilerArgs.add("-Werror")
}


tasks.withType<Javadoc> {
    options.encoding = "UTF-8"
}

tasks.withType<Test> {
    jvmArgs("--enable-native-access=ALL-UNNAMED")
}

tasks.withType<JavaExec> {
    jvmArgs("--enable-native-access=ALL-UNNAMED")
}
